# Project_VI_V3

./: CHANGELOG.md  COMPUTATIONAL_PHYSICS.md  CRASH_RECOVERY_GUIDE.md  CREDITS.md  Cargo.toml  DOCUMENTATION.md  DOCUMENTATION_CLEANUP_PLAN.md  IMPLEMENTATION_COMPLETE_V3.0.md  README.md  VI_DIARY.md  cleanup_docs.bat  config.toml  config_v4.toml  run_vi3.sh
docs_backup/: ALL_DONE.md  BATCH_FILES_GUIDE.md  BATCH_FILES_ORDER.md  CHANGELOG_V3.1.md  COPY_LAST_2_GUIDE.md  DOCUMENTATION_INDEX.md  INDEX.md  INTEGRATION_COMPLETE_V3.1.md  PROJECT_VI_V3_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_VI3.md  START_HERE.md  THANK_YOU.md  V3.1_RELEASE_NOTES.md  VI3_QUICKSTART.md  VI_IDENTITY_INTEGRATION.md
src/: config.rs  consciousness.rs  consciousness_field.rs  constitutional_physics.rs  conversation_logger.rs  cortical_visualizer.rs  curiosity_search.rs  main.rs  memory.rs  models.rs  physics.rs  types.rs  ui.rs
