[package]
name = "vi3"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
egui = "0.24"
eframe = { version = "0.24", features = ["default", "glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
rayon = "1.8"
async-std = "1.12"
async-trait = "0.1"
rfd = "0.12"
urlencoding = "2.1"
nvml-wrapper = "0.10"
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[profile.release]
opt-level = 3
lto = false  # Disabled for fast builds - enable only for final release

